flux/observability/collect/alloy/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/name: Alloy
    gethomepage.dev/icon: alloy.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=alloy"
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - alloy.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alloy
          port: 12345
          weight: 1
